--- a/java/pom.xml
+++ b/java/pom.xml
@@ -3,10 +3,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>xyz.esion</groupId>
-    <artifactId>disk</artifactId>
+    <artifactId>manage</artifactId>
     <version>1.0</version>
     <name>java</name>
-    <description>个人网盘</description>
+    <description>云落管理系统</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -55,7 +55,6 @@
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
-            <version>3.21.0.1</version>
         </dependency>
         <!-- sa-token 权限认证, 在线文档：http://sa-token.dev33.cn/ -->
         <dependency>
