--- a/java/pom.xml
+++ b/java/pom.xml
@@ -62,6 +62,12 @@
             <artifactId>sa-token-spring-boot-starter</artifactId>
             <version>1.19.0</version>
         </dependency>
+        <!-- 获取系统信息 -->
+        <dependency>
+            <groupId>com.github.oshi</groupId>
+            <artifactId>oshi-core</artifactId>
+            <version>3.12.2</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
