--- a/java/pom.xml
+++ b/java/pom.xml
@@ -99,7 +99,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.3.7.RELEASE</version>
                 <configuration>
-                    <mainClass>xyz.esion.disk.JavaApplication</mainClass>
+                    <mainClass>xyz.esion.manage.JavaApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
