--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "manage",
+  "name": "web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,29 +8,32 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "core-js": "^3.6.4",
-    "element-ui": "^2.13.0",
-    "font-awesome": "^4.7.0",
-    "marked": "^0.8.0",
+    "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-awesome-swiper": "^3.1.3",
-    "wangeditor": "^3.1.1"
+    "vue-router": "^3.0.1",
+    "axios": "^0.21.1",
+    "vuetify": "^2.4.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^7.3.1",
+    "style-loader": "^3.1.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.2.0",
-    "@vue/cli-plugin-eslint": "^4.2.0",
-    "@vue/cli-service": "^4.2.0",
-    "babel-eslint": "^10.0.3",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.1.2",
-    "vue-template-compiler": "^2.6.11"
+    "eslint-plugin-vue": "^6.2.2",
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "~2.4.1",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
     "root": true,
     "env": {
-      "node": true,
-      "jquery": true
+      "node": true
     },
     "extends": [
       "plugin:vue/essential",
@@ -43,6 +46,7 @@
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions"
+    "last 2 versions",
+    "not dead"
   ]
 }
