--- a/web/package.json
+++ b/web/package.json
@@ -8,14 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-router": "^3.0.1",
     "axios": "^0.21.1",
-    "vuetify": "^2.4.0",
+    "core-js": "^3.6.5",
+    "element-ui": "^2.15.3",
     "node-sass": "^4.14.1",
-    "sass-loader": "^7.3.1",
-    "style-loader": "^3.1.0"
+    "sass-loader": "^7.1.0",
+    "style-loader": "^3.1.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -26,9 +26,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
-    "vue-cli-plugin-vuetify": "~2.4.1",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.7.0"
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
