--- a/java/src/main/resources/application-dev.yml
+++ b/java/src/main/resources/application-dev.yml
@@ -27,6 +27,7 @@ spring:
     is-log: false
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
+    property-naming-strategy: CAMEL_CASE_TO_LOWER_CASE_WITH_UNDERSCORES
   servlet:
     multipart:
       max-file-size: 100MB
