--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^3.1.0",
     "vue": "^2.6.11",
+    "vue-codemirror": "^4.0.6",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
