--- a/java/src/main/resources/application-dev.yml
+++ b/java/src/main/resources/application-dev.yml
@@ -39,6 +39,9 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     map-underscore-to-camel-case: true
   mapper-locations: classpath:mapper/*.xml
+  global-config:
+    db-config:
+      logic-delete-field: isDelete
 
 logging:
   level.xyz.esion.manage: debug
